crates/pardosa/tests/ui/no_pub_lsn_new.rs
#![allow(unreachable_code, unused)]
use pardosa::store::Lsn;
fn use_lsn_new_from_adopter_code() {
    let _ = Lsn::new(0);
}
fn main() {}
